--- a/src/components/liquidity-positions/index.scss
+++ b/src/components/liquidity-positions/index.scss
@@ -1,6 +1,6 @@
 @import "App.scss";
 .arrow-left {
-  color: $plexus-light-blue;
+  color: var(--color-left-arrow);
   margin-left: 15px;
   margin-top: 3px;
   margin-right: 10px;
@@ -11,30 +11,30 @@
 }
 
 .asset_div {
-    background-color: #0E1726 !important;
+    background-color: var(--color-div-bg) !important;
     border-radius: 10px;
     font-family: $plexus-font-family;
     cursor: pointer;
 }
 .asset_div.active {
   background-color: transparent !important;
-  border: 1px solid #4ea4d3 ;
+  border: 1px solid --color-selected-div-border ;
   border-radius: 10px;
 
 }
 .table_col_first {
-    background-color: #0E1726 !important;
+    background-color: var(--color-div-bg) !important;
     border-radius: 10px 0 0 10px;
     font-family: $plexus-font-family;
 }
 
 .table_col_last {
-    background-color: #0E1726 !important;
+    background-color: var(--color-div-bg) !important;
     border-radius: 0 10px 10px 0;
     font-family: $plexus-font-family;
 }
 
 .table_col {
-    background-color: #0E1726 !important;
+    background-color: var(--color-div-bg) !important;
     font-family: $plexus-font-family;
 }
