--- a/src/components/wallet/index.scss
+++ b/src/components/wallet/index.scss
@@ -1,7 +1,7 @@
 @import "App.scss";
 
 .arrow-left {
-  color: $plexus-light-blue;
+  color: var(--color-left-arrow);
   margin-left: 15px;
   margin-top: 3px;
   margin-right: 10px;
@@ -12,26 +12,26 @@
 }
 
 .asset_div {
-  background-color: #0E1726 !important;
+  background-color: var(--color-div-bg) !important;
   border-radius: 10px;
   font-family: $plexus-font-family;
   cursor: pointer;
 }
 
 .table_col_first {
-  background-color: #0E1726 !important;
+  background-color: var(--color-div-bg) !important;
   border-radius: 10px 0 0 10px;
   font-family: $plexus-font-family;
 }
 
 .table_col_last {
-  background-color: #0E1726 !important;
+  background-color: var(--color-div-bg) !important;
   border-radius: 0 10px 10px 0;
   font-family: $plexus-font-family;
 }
 
 .table_col {
-  background-color: #0E1726 !important;
+  background-color: var(--color-div-bg) !important;
   font-family: $plexus-font-family;
 }
 
@@ -48,7 +48,7 @@
 }
 
 .color-light {
-  color: $plexus-light-blue;
+  color:#62B0E5;
 }
 
 .w-fixed-120 {
