--- a/src/components/yield-aggregator/index.scss
+++ b/src/components/yield-aggregator/index.scss
@@ -7,5 +7,5 @@
 .tr-active {
   border-radius: 10px;
   border: 1px solid;
-  border-color: $plexus-light-blue;
+  border-color: var(--color-selected-div-border);
 }
