--- a/src/components/lend-borrow-ui/index.scss
+++ b/src/components/lend-borrow-ui/index.scss
@@ -1,6 +1,6 @@
 @import "App.scss";
 .arrow-left {
-  color: $plexus-light-blue;
+  color: var(--color-left-arrow);
   margin-left: 15px;
   margin-top: 3px;
   margin-right: 10px;
