--- a/src/components/staking/index.scss
+++ b/src/components/staking/index.scss
@@ -3,7 +3,7 @@
     cursor: pointer;
 }
 .arrow-left {
-    color: $plexus-light-blue;
+    color: var(--color-left-arrow);
     margin-left: 15px;
     margin-top: 3px;
     margin-right: 10px;
