--- a/src/components/liquidity-positions/index.scss
+++ b/src/components/liquidity-positions/index.scss
@@ -18,7 +18,7 @@
 }
 .asset_div.active {
   background-color: transparent !important;
-  border: 1px solid --color-selected-div-border ;
+  border: 1px solid var(--color-selected-div-border) !important;
   border-radius: 10px;
 
 }
