--- a/src/components/lp-tools/index.scss
+++ b/src/components/lp-tools/index.scss
@@ -92,3 +92,12 @@
     align-items: center;
     justify-content: center;
 }
+
+@media screen and (max-width: 1024px) {
+    .asset_div {
+      background-color: var(--color-selected-div-bg) !important;
+      border-radius: 10px;
+      font-family: $plexus-font-family;
+      cursor: pointer;
+    }
+  }
