--- a/src/components/theme-toggle/index.scss
+++ b/src/components/theme-toggle/index.scss
@@ -9,9 +9,9 @@
 
 @media screen and (max-width: 1024px) {
   .theme-toggle {
-    position: absolute;
+    position: fixed;
     top: 10px;
     right: 20px;
-    z-index: 1;
+    z-index: 1001;
   }
 }
