--- a/src/components/wallet/index.scss
+++ b/src/components/wallet/index.scss
@@ -54,3 +54,12 @@
 .w-fixed-120 {
   width: 130px;
 }
+
+@media screen and (max-width: 1024px) {
+  .asset_div {
+    background-color: var(--color-selected-div-bg) !important;
+    border-radius: 10px;
+    font-family: $plexus-font-family;
+    cursor: pointer;
+  }
+}
