--- a/src/components/yield-aggregator/index.scss
+++ b/src/components/yield-aggregator/index.scss
@@ -9,3 +9,30 @@
   border: 1px solid;
   border-color: var(--color-selected-div-border);
 }
+
+.text-protocol {
+  color: var(--color-text1);
+  letter-spacing: 1px;
+  margin-right: 8px;
+}
+
+@media screen and (max-width: 1024px) {
+  .text-protocol {
+    color: var(--color-text1);
+    font-size: 14px;
+    letter-spacing: 1px;
+    margin-top: 8px;
+  } 
+}
+
+.yield-card {
+  background-color: var(--color-body-background);
+  border-radius: 10px;
+  margin-top: 10px;
+  padding: 10px;
+}
+
+.yield-card-field {
+  color: var(--color-asset-div-text2);
+  font-size: 10px;
+}
