--- a/src/components/wallet/index.scss
+++ b/src/components/wallet/index.scss
@@ -57,7 +57,7 @@
 
 @media screen and (max-width: 1024px) {
   .asset_div {
-    background-color: var(--color-selected-div-bg) !important;
+    background-color: var(--color-selected-div-bg-mobile) !important;
     border-radius: 10px;
     font-family: $plexus-font-family;
     cursor: pointer;
