--- a/src/components/yield-aggregator/index.scss
+++ b/src/components/yield-aggregator/index.scss
@@ -26,7 +26,7 @@
 }
 
 .yield-card {
-  background-color: var(--color-body-background);
+  background-color: var(--color-selected-div-bg-mobile);
   border-radius: 10px;
   margin-top: 10px;
   padding: 10px;
