Mobile Responsive; WALLET, LIQUIDITY, STAKING, REWARDS

--- a/src/components/liquidity-positions/index.scss
+++ b/src/components/liquidity-positions/index.scss
@@ -45,4 +45,8 @@
     font-family: $plexus-font-family;
     cursor: pointer;
   }
+  .liquidity_protocol_container {
+    flex-wrap: nowrap !important;
+    overflow: scroll !important;
+  }
 }
