mobile page 14, 15; Liquidity & Rewards Popup; Set Dark as default Theme; fix margin issue on lp tools page

--- a/src/components/liquidity-positions/index.scss
+++ b/src/components/liquidity-positions/index.scss
@@ -46,7 +46,7 @@
     cursor: pointer;
   }
   .liquidity_protocol_container {
-    flex-wrap: nowrap !important;
-    overflow: scroll !important;
+    // flex-wrap: nowrap !important;
+    // overflow: scroll !important;
   }
 }
