--- a/src/components/liquidity-positions/liquidity-popup/index.scss
+++ b/src/components/liquidity-positions/liquidity-popup/index.scss
@@ -30,6 +30,36 @@
       padding-left: 1.0em;
       padding-right: 1.0em;
       background-size: cover;
+
+      .stake-button {
+        font-style: normal;
+        font-weight: 500 !important;
+        line-height: 32px !important;
+        font-size: 0.75em;
+        font-family: "Azo Sans Regular";
+        color: var(--color-button-text) !important;
+        padding-left: 0.5em !important;
+        padding-right: 0.5em !important;
+        padding-top: 0.5em !important;
+        padding-bottom: 0.5em !important;
+        border-radius: 10px !important;
+        background-color: var(--color-button-bg) !important;
+        text-align: center !important;
+        width: 100%;
+        letter-spacing: 1px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .stake-description {
+        font-family: $plexus-font-family;
+        font-weight: 500;
+        font-size: 0.85em;
+        // line-height: 20px;
+        color: var(--color-sidebar-subtitle-text);
+      }
+      
     }
   }
 }
