Added connect wallet functionality

--- a/src/components/user-address/index.scss
+++ b/src/components/user-address/index.scss
@@ -3,6 +3,7 @@
   font-family: "Nova Mono Regular";
   font-weight: 400;
   font-size: 0.9em;
+  cursor: pointer;
   // line-height: 36px;
   letter-spacing: 1.5px;
 }
