Integrated Liquidity UI for Susihswap and uniswap

--- a/src/components/user-staking/index.scss
+++ b/src/components/user-staking/index.scss
@@ -1,6 +1,6 @@
 @import "App.scss";
 
-.user-staking-uniswap {
+.user-stake-uniswap {
   background-color: var(--color-sidebar-bg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -20,7 +20,7 @@
   min-width: 300px;
 }
 
-.user-staking-1inch {
+.user-stake-1inch {
   background-color: var(--color-sidebar-bg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -40,7 +40,7 @@
   min-width: 300px;
 }
 
-.user-staking-sushiswap {
+.user-stake-sushiswap {
   background-color: var(--color-sidebar-bg);
   background-size: cover;
   background-repeat: no-repeat;
